# crates.io_analyses

./: .gitignore  Dockerfile  README.md  analyze.py  crates_info.csv  deny.toml  gather.py  main.py  pyproject.toml
data/: info_1.csv  info_3.csv
